# prism-cli

./: .gitignore  README.md
cli/: Cargo.toml  config.example.toml
cli/src/: app.rs  config.rs  dummy.rs  k8s.rs  main.rs  ssh.rs
cli/src/ui/: dashboard.rs  mod.rs  theme.rs
