[package]
name = "prism"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
k8s-openapi = { version = "0.27", features = ["v1_31"] }
kube = { version = "3.0", features = ["runtime", "derive", "client"] }
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
